[project]
name = "python-starter-template"
version = "0.1.0"
description = "Dorman Lab Python starter project"
requires-python = ">=3.12,<3.13"
dependencies = [
  "gdown",
  "h5py",
  "ipykernel",
  "ipympl",
  "ipywidgets",
  "joblib",
  "matplotlib",
  "numpy",
  "openpyxl",
  "pandas",
  "pip",
  "plotly",
  "polars",
  "pyarrow",
  "requests",
  "scikit-learn",
  "scipy",
  "seaborn",
  "statsmodels",
  "tables",
  "tqdm",
  "xarray"
]

[dependency-groups]
dev = [
  "pytest",
  "ruff"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
